Add background cloud saving for solutions
